redux 불필요 코드 수정/삭제, 코드 간결화를 위한 redux tool package 설치 및 store 코드 수정, scroll을 props로 받지 않는 컴포넌트에 대해 re-rendering 되지 않도록 shouldcomponentupdate를 이용한 최적화

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^7.1.2",
         "@types/react-lottie": "^1.2.5",
         "emailjs-com": "^2.6.4",
+        "extension": "^0.2.2",
         "immutable": "^4.0.0-rc.12",
         "nginx": "^0.0.0",
         "react": "^16.14.0",
@@ -18,6 +19,7 @@
         "react-scripts": "^3.4.4",
         "redux": "^4.0.5",
         "redux-actions": "^2.6.5",
+        "redux-devtools-extension": "^2.13.8",
         "styled-components": "^5.2.1"
     },
     "scripts": {
